--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Description: This project scrapes the Iowa Department of Health COVID-19 site
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/ijlyttle/covidIowa
+BugReports: https://github.com/ijlyttle/covidIowa/issues
