--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -96,5 +96,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add -u
+          got add 'data/**/*.html'
+          got add 'data/**/*.csv'
           git commit -m "updated by Actions" || echo "No changes to commit"
           git push || echo "No changes to commit"
