--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -96,7 +96,6 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add -u
-          git add 'data/**/*.html'
-          git add 'data/**/*.csv'
+          git add 'data/*' || echo "No data changes"
           git commit -m "updated by Actions" || echo "No changes to commit"
           git push || echo "No changes to commit"
