--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -85,6 +85,7 @@ jobs:
         # - to run another workflow, add another call
         run: |
           projthis::proj_workflow_render("workflow")
+          rmarkdown::render("README.Rmd")
         shell: Rscript {0}
 
       # adapt this step to deploy your project
